--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,8 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0",
+  "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "nohoist": ["parcel-bundler"]
 }
