--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
     "develop": "scripty",
     "build": "scripty",
     "lint": "scripty",
+    "lint:eslint": "scripty",
+    "lint:prettier": "scripty",
+    "lint:check": "scripty",
+    "clean": "scripty",
+    "prepare": "husky install",
     "test": "scripty",
-    "clean": "scripty"
+    "test:watch": "scripty",
+    "test:staged": "scripty",
+    "test:ci": "scripty"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@commitlint/config-lerna-scopes": "^16.2.2",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^7.12.1",
@@ -24,7 +34,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.0",
     "lerna": "^4.0.0",
+    "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "scripty": "^2.0.0",
@@ -34,6 +47,6 @@
     "packages/*"
   ],
   "scripty": {
-    "path": "./config/scripts/workspace"
+    "path": "./config/scripts/workspaces"
   }
 }
