--- a/packages/appshell/package.json
+++ b/packages/appshell/package.json
@@ -6,8 +6,14 @@
   "scripts": {
     "develop": "scripty",
     "lint": "scripty",
+    "lint:eslint": "scripty",
+    "lint:prettier": "scripty",
+    "lint:check": "scripty",
     "build": "scripty",
     "clean": "scripty",
+    "test": "scripty",
+    "test:watch": "scripty",
+    "test:staged": "scripty",
     "test:ci": "scripty"
   },
   "scripty": {
@@ -52,5 +58,12 @@
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "yarn lint:eslint",
+      "yarn lint:prettier",
+      "yarn test:staged"
+    ]
   }
 }
