--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint:eslint": "scripty",
     "lint:prettier": "scripty",
     "lint:check": "scripty",
+    "lint:staged": "lint-staged",
     "clean": "scripty",
     "prepare": "husky install",
     "test": "scripty",
@@ -57,5 +58,12 @@
   ],
   "scripty": {
     "path": "./config/scripts/workspaces"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "yarn lint:eslint",
+      "yarn lint:prettier",
+      "yarn test:staged"
+    ]
   }
 }
