chore(appshell): add lint-staged script on package.json

--- a/package.json
+++ b/package.json
@@ -63,5 +63,12 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "yarn lint:eslint",
+      "yarn lint:prettier",
+      "yarn test:staged"
+    ]
   }
 }
